ADD simple git config to jcasc

--- a/basic-jcasc/jenkins.yaml
+++ b/basic-jcasc/jenkins.yaml
@@ -4,3 +4,8 @@ jenkins:
 security:
     globaljobdslsecurityconfiguration:
         useScriptSecurity: false
+
+unclassified:
+  gitscm:
+    globalConfigName: jenkins
+    globalConfigEmail: jenkins@domain.local
